--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.2",
-    "@angular-eslint/builder": "14.1.1",
+    "@angular-eslint/builder": "^14.4.0",
     "@angular-eslint/eslint-plugin": "14.1.1",
     "@angular-eslint/eslint-plugin-template": "14.1.1",
     "@angular-eslint/schematics": "14.1.1",
