--- a/package.json
+++ b/package.json
@@ -61,11 +61,14 @@
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "tmp": "0.2.5"
   }
 }
